# book_sales_deployment

./: .claude.md  .gitignore  ARIMA_MODULE_ORGANIZATION.md  ARIMA_TEST_RESULTS.md  DEPLOYMENT_README.md  IMPROVEMENTS_SUMMARY.md  PERSISTENT_OPTUNA_CHANGES.md  PIPELINE_README.md  PLOT_CONTROL_GUIDE.md  PRODUCTION_READINESS_ACTION_PLAN.md  PROJECT_SUMMARY.md  README.md  README_CLEANED.md  README_TIME_SERIES_DIAGNOSTICS.md  book_sales_arima_optimization.db  check_all_experiments.py  check_experiment.py  check_pipeline_run.py  check_recent_runs.py  compare_mlflow_approaches.py  pyproject.toml  run_cnn_with_plotting.py  run_no_plots.py  run_pipeline.py  simple_mlflow_test.py  test_arima_integration.py  test_arima_models.py  test_arima_pipeline.py  test_cnn.py  test_cnn_with_plotting.py  test_csv_loading.py  test_mlflow_individual_runs.py  test_modelling_fix.py  test_persistent_optuna.py  test_pipeline_fix.py  test_pure_mlflow.py  test_zenml_mlflow_minimal.py
.zen/: config.yaml
config/: __init__.py  arima_training_config.py
deploy/: 01_legacy_train_pipeline_and_create_endpoints.py  01_train_pipeline_and_create_endpoints.py  02_deploy_models_endpoint.py  02_upload_models_to_gcs.py  03_deploy_to_vertex_endpoints.py  DEPLOYMENT_MLFLOW_ISSUE.md  DEPLOYMENT_README.md  deploy_models.py  deploy_readme.txt  deploy_zenml_server.sh  deployment_mlops_review.md  vertex_deployment.py  vertex_endpoint_plan.md
deploy_endpoint/: advancing_mlops.txt  deployment_mlops_review.md
dev/: sarima_lstm_notebook.py
docs/: OPTIMIZATION_SUMMARY.md  zenml_pipeline_optimization_guide.md
lstm_residuals_hybrid/: oracle.json
mlflow/: README.md  backup_metadata.py
next_steps/: script_to_install_other_pcs
optuna_storage/: test_persistent_optimization.db
pipelines/: old_zenml_pipeline.py  vertex_pipeline_fix.txt  zenml_pipeline.py  zenml_pipeline_arima.py  zenml_pipeline_arima_lstm.py  zenml_pipeline_cnn_lstm.py  zenml_pipeline_latest_31_jul.py  zenml_pipeline_old.py  zenml_pipeline_test.py  zenml_pipeline_test_latest.py  zenml_pipeline_with_arima.py  zenml_pipeline_with_modelling_prep.py
progress_summaries/: overall_progress_summary_16_jul_25
scripts/: arima_forecast_load_artefacts.py  arima_model_diagnostics.py  arima_plots.py  arima_residuals_for_lstm.py  arima_standalone.py  backup_mlflow_metadata.py  cnn_standalone.py  comprehensive_diagnostics.py  correct_hybrid_plot.py  data_debugging.py  highlight_user_books.py  hybrid_plotting.py  interactive_diagnostics.py  modelling_prep.py  preprocessing.py  residuals_analysis.py  run_EDA.py  run_analysis.py  run_arima_pipeline.py  run_arima_pipeline_improved.py  run_classification.py  run_diagnostics_minimal.py  run_time_series.py  seasonality_business_insights.py  seasonality_deployment_analysis.py  test_cleaned_code.py
steps/: _01_load_data.py  _02_5_data_quality.py  _02_preprocessing.py  _03_5_cnn_scaling  _03_5_modelling_prep.py  _03__time_series_diagnostics.py  _04_5_arima_training.py  _04_arima  _04_arima.py  _04_arima_logic.py  _04_arima_plots.py  _04_arima_standalone.py  _04_arima_zenml_mlflow_optuna.py  _04_arima_zenml_mlflow_optuna_improved.py  _04_cnn.py  _04_cnn_standalone.py  _04_lstm_standalone.py  _04_model_arima.py  _05_lstm  _05_lstm.py  _05_lstm_cnn_residuals.py  _05_lstm_original_data.py  _05_lstm_sarima_residuals.py  _05_lstm_trained_cnn_residuals.py  (+11 more)
(+153 files in other folders)
