[tool.poetry]
name = "book-sales-deployment"
version = "0.1.0"
description = "Book sales deployment with ZenML"
authors = ["Zarif Shafiei <zarif@example.com>"]
packages = [
    { include = "pipelines" },
    { include = "steps" },
    { include = "utils" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
zenml = "0.84.2"

# Core data science stack - use compatible versions
numpy = "^1.24.0"
pandas = "^2.0.0"
scipy = "^1.10.0"
scikit-learn = "^1.3.0"

# ML and monitoring
mlflow = "^2.3.0"
optuna = "^3.0.0"
great-expectations = "^0.17.0"
evidently = "^0.4.0"

# Visualization
matplotlib = "^3.7.0"
seaborn = "^0.12.0"
plotly = "^5.18.0"    #6.2.0 go back to this?

# Time series and specialized ML
pmdarima = "^2.0.4"
arch = "^5.0.0"
mpld3 = "^0.5.0"
statsmodels = "^0.14.0"

# Deep learning - use compatible version
tensorflow = "^2.13.0"

# Utilities
pyyaml = "^6.0"
gdown = "^5.2.0"
gcsfs = ">=2024.2.0,!=2025.5.0,!=2025.5.0.post1,<=2024.12.0"
openpyxl = "^3.1.2"
setuptools = "<81.0.0"
secure = "^0.3.0"
PyJWT = "^2.8.0"
python-multipart = "^0.0.6"
protobuf = ">=4.21.1,<5"
orjson = "^3.11.0"

# API (optional)
fastapi = "^0.100.0"
uvicorn = "^0.22.0"

# Streamlit UI
streamlit = "^1.28.0"

# GCP Integration for ZenML (Vertex AI orchestration)
google-cloud-aiplatform = ">=1.34.0"
google-cloud-storage = ">=2.9.0" 
google-cloud-container = ">=2.21.0"
google-cloud-artifact-registry = ">=1.11.3"
google-cloud-secret-manager = "*"
google-cloud-build = ">=3.11.0"
google-cloud-pipeline-components = ">=2.19.0"
kfp = ">=2.6.0"
kubernetes = "*"

# Fix dependency conflicts
click = ">=8.0.0,<8.1.8"

[tool.poetry.group.dev.dependencies]
# Code quality and linting
black = "^23.0.0"
flake8 = "^6.0.0"
isort = "^5.12.0"

# Testing
pytest = "^7.4.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

